<resources>
    <string name="app_name">L Music Player</string>
    <string name="app_toolbar_name">L Music Player</string>


<!--MAIN TAB LAYOUT NAMES-->
     <string name="main_tab_layout_label_1">Home</string>
     <string name="main_tab_layout_label_2">Albums</string>
     <string name="main_tab_layout_label_3">Tracks</string>
     <string name="main_tab_layout_label_4">Artists</string>

<!--MAIN MENU STRING ITEMS-->
    <string name="search">Search</string>
    <string name="feedback">Feedback</string>
    <string name="rate_app">Rate App</string>
    <string name="share">Share</string>

<!--OTHER STRINGS-->
    <string name="year_not_available">Year not available</string>
    <string name="track">Track</string>


<!--SONGS STRINGS-->
    <string name="track_title">Track Name</string>
    <string name="tracks">Tracks</string>
    <string name="track_duration">Track Duration</string>


<!--ARTIST STRINGS-->
    <string name="artist_name">Artist Name</string>
    <string name="artist_duration">Artist Duration</string>
    <string name="number_of_albums_and_number_of_tracks">Number of Albums | Number of Tracks</string>

<!--CONTENT DESCRIPTIONS FOR IMAGE VIEWS IMAGE BUTTONS-->
    <string name="overflow_button">Overflow Button</string>
    <string name="album_icon">Album Icon</string>
    <string name="previous_track">Previous Track</string>
    <string name="play_pause">Play / Pause </string>
    <string name="next_track">Next Track</string>
    <string name="artist_icon">Artist Icon</string>
    <string name="duration">Duration</string>
    <string name="view_line">View Line</string>
    <string name="stop_service">Stop Service</string>



<!--ALBUM STRINGS-->
    <string name="album_title">Album Name</string>
    <string name="album_year">Album Year</string>
    <string name="albums">Albums</string>
    <string name="album_duration">Album Duration</string>
    <string name="number_of_tracks">Number Of Tracks</string>



<!--OTHER STRINGS-->
    <string name="run_time">0:00</string>
    <string name="total_time">0:00</string>
    <string name="music_list_empty">Your music list is empty!</string>
    <string name="lyrics_here">Lyrics here!</string>
    <string name="search_music">Search Music</string>
    <string name="settings">Settings</string>
    <string name="shuffle_all">Shuffle All</string>
    <string name="go_to_album">Go to album</string>
    <string name="go_to_artist">Go to artist</string>
    <string name="play_next">Play next</string>
    <string name="add_to_playing_queue">Add to playing queue</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="action_left_chevron">Action left chevron</string>
    <string name="track_details">Track details</string>
    <string name="album_name">Album Name</string>
    <string name="number_of_albums">Number Of Albums</string>
    <string name="change_background">Change background</string>
    <string name="enable_lyrics_editing">Enable lyrics editing</string>
    <string name="disable_lyrics_editing">Disable lyrics editing</string>
    <string name="enable_lyrics">Enable lyrics</string>
    <string name="disable_lyrics">Disable lyrics</string>
    <string name="lyrics_not_found">Lyrics not found!</string>
    <string name="please_enable_lyrics">Please enable lyrics!</string>
    <string name="create_playlist">Create playlist</string>
    <string name="save_lyrics">Save Lyrics</string>
    <string name="add_lyrics">Add lyrics</string>
    <string name="text">Text</string>
    <string name="play">Play</string>
    <string name="sync_lyric">Sync lyric</string>
    <string name="add_lyric_before">Add lyric before</string>
    <string name="add_lyric_after">Add lyric after</string>
    <string name="choose_theme">Choose Theme</string>
    <string name="iv_transition_name">blue</string>
    <string name="channel_name">L Music Player</string>
    <string name="album_thumbnail">albumThumbnail</string>
    <string name="album_overflow">Album Overflow</string>
    <string name="back">Back</string>
    <string name="artist_details">Artist Details</string>
    <string name="zero_album">0 Album</string>
    <string name="zero_track">0 Track</string>
    <string name="artist_image">Artist Image</string>
    <string name="album_count">Album Count</string>
    <string name="track_count">Track Count</string>
    <string name="toolbar_title">Toolbar Title</string>
    <string name="dot">Dot</string>
    <string name="zero">0</string>


</resources>
