<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group >

        <item
            android:title="@string/go_to_album"
            android:id="@+id/song_menu_item_1"/>

        <item
            android:title="@string/go_to_artist"
            android:id="@+id/song_menu_item_2"/>

        <item
            android:title="@string/play"
            android:id="@+id/song_menu_item_3"/>

        <item
            android:title="@string/play_next"
            android:id="@+id/song_menu_item_4"/>


        <item
            android:title="@string/add_to_playing_queue"
            android:id="@+id/song_menu_item_5"/>

        <item
            android:title="@string/add_to_playlist"
            android:id="@+id/song_menu_item_6"/>

    </group>

</menu>