<?xml version="1.0" encoding="utf-8"?>
<TableRow
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:gravity="center_vertical"
    android:background="@drawable/dv_heading_left"
    android:layout_height="wrap_content">

    <player.music.customviews.UbuntuTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:padding="@dimen/padding_half"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/margin_half"
        android:transitionName="@string/track_count"
        android:textColor="@color/colorTextPrimary"
        android:id="@+id/utv_track_count"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>


    <player.music.customviews.UbuntuTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/track"
        android:layout_marginEnd="@dimen/margin_max"
        android:transitionName="@string/track_count"
        android:textColor="@color/colorTextPrimary"
        android:id="@+id/utv_track"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

</TableRow>

