<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:clickable="true"
    android:focusable="true"
    android:padding="@dimen/extra_padding"
    android:paddingStart="@dimen/extra_padding"
    android:paddingEnd="@dimen/extra_half_padding"
    android:foreground="?attr/selectableItemBackground"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        app:cardBackgroundColor="@color/colorBackgroundTertiary"
        app:cardElevation="@dimen/text_padding"
        app:cardCornerRadius="@dimen/common_cardview_radius"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="@dimen/song_layout_album_image_width"
            android:layout_height="@dimen/song_layout_album_image_height"
            android:contentDescription="@string/album_icon"
            android:background="@color/colorBackgroundTertiary"
            android:scaleType="fitXY"
            android:id="@+id/iv_album_art"/>

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:paddingStart="@dimen/extra_padding"
        android:paddingEnd="@dimen/image_padding_right"
        android:layout_gravity="center"
        android:layout_height="wrap_content">

        <player.music.customviews.UbuntuTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_small_16sp"
            android:singleLine="true"
            android:textStyle="bold"
            android:text="@string/track_title"
            android:textColor="@color/colorTextPrimary"
            android:id="@+id/utv_track_title"/>

        <TableRow
            android:layout_width="match_parent"
            android:paddingTop="@dimen/text_padding"
            android:layout_height="wrap_content">

            <player.music.customviews.UbuntuTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/colorTextSecondary"
                android:textSize="@dimen/text_size_small"
                android:text="@string/album_name"
                android:id="@+id/utv_album_name" />

            <ImageView
                android:layout_width="@dimen/dot_width"
                android:layout_height="@dimen/dot_height"
                android:layout_marginStart="@dimen/margin_min"
                android:layout_marginEnd="@dimen/margin_min"
                android:padding="@dimen/padding_min"
                android:contentDescription="@string/dot"
                android:src="@drawable/circle_dot_outline"/>

            <player.music.customviews.UbuntuTextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/colorTextSecondary"
                android:textSize="@dimen/text_size_small"
                android:text="@string/track_details"
                android:id="@+id/utv_artist_name" />

            <player.music.customviews.UbuntuTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/colorTextSecondary"
                android:textSize="@dimen/text_size_small"
                android:text="@string/track_duration"
                android:layout_marginStart="@dimen/extra_half_margin"
                android:id="@+id/utv_track_duration" />

        </TableRow>

    </LinearLayout>

    <ImageView
        android:layout_width="@dimen/overflow_icon_width"
        android:src="@drawable/ic_overflow_menu"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/actionBarItemBackground"
        android:contentDescription="@string/overflow_button"
        android:scaleType="centerInside"
        android:id="@+id/iv_overflow_menu"
        android:layout_height="match_parent"/>


</LinearLayout>
